--- a/thesis/listofconstants.tex
+++ b/thesis/listofconstants.tex
@@ -33,7 +33,7 @@ The following list summarises abbreviations that are commonly used in this thesi
     \item FDF: Faraday dispersion function, a representation of a polarisation spectrum
     \item FIRST: Faint Images of the Radio Sky at Twenty Centimeters, a large radio survey
     \item FRI: Fanaroff-Riley type I, an edge-darkened radio galaxy
-    \item FRII: Fanaroff-Riley type II, an edge-brightned radio galaxy
+    \item FRII: Fanaroff-Riley type II, an edge-brightened radio galaxy
     \item ISM: interstellar medium, the stuff between stars
     \item LR: logistic regression, a classification model
     \item MWA: Murchison Widefield Array, a next-generation radio telescope in Murchison
